fix input overflow in ie11

--- a/src/partials/LoginForm/LoginForm.scss
+++ b/src/partials/LoginForm/LoginForm.scss
@@ -8,6 +8,7 @@ form[name="login"] {
 
 	input {
 		flex:1 0 70%;
+		max-width:70%;
 	}
 
 	button {
