--- a/src/tabs/Account/Account.scss
+++ b/src/tabs/Account/Account.scss
@@ -28,5 +28,6 @@ form[name="passwordUpdate"] {
 
 	input {
 		flex:1 0 65%;
+		max-width:65%;
 	}
 }
