--- a/src/tabs/Admin/Assignments/Assignments.scss
+++ b/src/tabs/Admin/Assignments/Assignments.scss
@@ -63,6 +63,7 @@ form[name="assignEval"] {
 	.autocomplete-container,
 	select {
 		flex:0 0 75%;
+		max-width:75%;
 	}
 
 	button {
