--- a/src/tabs/Admin/Reminder/Reminder.scss
+++ b/src/tabs/Admin/Reminder/Reminder.scss
@@ -14,6 +14,7 @@ form[name="reminder"] {
 	input[type="text"],
 	textarea {
 		flex:0 0 85%;
+		max-width:85%;
 	}
 
 	textarea {
