--- a/src/tabs/Residents/Residents.scss
+++ b/src/tabs/Residents/Residents.scss
@@ -106,6 +106,7 @@ form[name="createCategory"] {
 	input[type="text"],
 	textarea {
 		flex:0 0 90%;
+		max-width:90%;
 	}
 
 	.button-container {
@@ -174,6 +175,7 @@ form[name="uploadFile"] {
 	input[type="url"],
 	select {
 		flex:0 0 85%;
+		max-width:85%;
 	}
 
 	.button-container {
